--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ body {
   padding: 0;
   position: absolute;
   list-style: none;
-  background-color: yellow;
+  background-color: #2E7D32;
 }
 
 .menu-horizontal li a:hover {
